dashboard is designed

--- a/add_company.html
+++ b/add_company.html
@@ -263,7 +263,7 @@
       <h1>Dashboard</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="dashboard.html">Company</a></li>
+          <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
           <li class="breadcrumb-item active">Add New Company</li>
         </ol>
       </nav>
@@ -289,18 +289,22 @@
             <input type="text" class="form-control" placeholder="Enter company Address...">
           </div>
           <div class="container mb-3">
-            <label class="form-label"><strong>Company Phone</strong></label>
-            <input type="phone" class="form-control" placeholder="Enter company Address...">
+            <label class="form-label"><strong>Company Ceo Name</strong></label>
+            <input type="text" class="form-control" placeholder="Enter company ceo name...">
           </div>
           <div class="container mb-3">
-            <label class="form-label"><strong>Company description</strong></label>
-            <textarea class="form-control" cols="20" rows="4" placeholder="Enter company description..."></textarea>
+            <label class="form-label"><strong>Company Phone</strong></label>
+            <input type="phone" class="form-control" placeholder="Enter company Address...">
           </div>
           <div class="container mb-3">
             <label class="form-label"><strong>Employee Amount</strong></label>
             <input type="text" class="form-control" placeholder="Enter employee amount ...">
           </div>
           <div class="container mb-3">
+            <label class="form-label"><strong>Company description</strong></label>
+            <textarea class="form-control" cols="20" rows="4" placeholder="Enter company description..."></textarea>
+          </div>
+          <!-- <div class="container mb-3">
             <label class="form-label"><strong>Subscription Type</strong></label>
             <select class="form-select">
               <option value="">Select Subscription Type</option>
@@ -308,8 +312,8 @@
               <option value="monthly">$49/monthly</option>
               <option value="yearly">$75/yearly</option>
             </select>
-          </div>
-          <div class="container mb-3">
+          </div> -->
+          <!-- <div class="container mb-3">
             <label class="form-label"><strong>Subscription total amount</strong></label>
             <input type="text" class="form-control" readonly value="0">
           </div>
@@ -321,7 +325,7 @@
             <label class="form-label"><strong>Subscription end date</strong></label>
             <input type="date" class="form-control" readonly>
           </div>
-        </div>
+        </div> -->
         <div class="text-center mb-3">
           <button class="btn btn-primary">Submit</button>
         </div>
