--- a/view_employee.html
+++ b/view_employee.html
@@ -261,6 +261,80 @@
   </aside><!-- End Sidebar-->
 
 
+  <main id="main" class="main">
+
+    <div class="pagetitle">
+      <h1>Dashboard</h1>
+      <nav>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
+          <li class="breadcrumb-item active">View Employe</li>
+        </ol>
+      </nav>
+    </div>
+    <div class="row">
+      <div class="col-xxl-20 col-md-12">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">View Employe </h5>
+          <div class="mb-4">
+            <div class="col-4 d-flex">
+              <input type="text" class="form-control" placeholder="Search by name">
+                  
+              <button class="btn btn-primary" style="position:relative;left:10px;">Search</button>
+            </div>
+          </div>
+            <!-- <p>Use contextual classes <code>.table-primary .table-secondary .table-success .table-danger .table-warning .table-info .table-light .table-dark</code> to color tables, table rows or individual cells.</p> -->
+            <!-- Table Variants -->
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="row">#</th>
+                  <th>Employe_Img</th>
+                  <th>Employe_Name</th>
+                  <th>Employe_Age</th>
+                  <th>Employe_Dob</th>
+                  <th>Employe_phone</th>
+                  <th>Employee_Address</th>
+                  <th>Employee_Service</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Image</td>
+                  <td>Omar Warfa Aadan</td>
+                  <td>21</td>
+                  <td>10-12-1998</td>
+                  <td>0634564345443</td>
+                  <td>Jarka , Borama-Somaliland</td>
+                  <td>Plumber</td>
+                  <td class="d-flex"><button class="btn btn-primary text-white">view</button>&numsp;<button class="btn btn-success">update</button>&numsp;<button class="btn btn-danger">delete</button></td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Image</td>
+                  <td>Omar Warfa Aadan</td>
+                  <td>21</td>
+                  <td>10-12-1998</td>
+                  <td>0634564345443</td>
+                  <td>Jarka , Borama-Somaliland</td>
+                  <td>Plumber</td>
+                  <td><button class="btn btn-primary text-white">view</button>&numsp;<button class="btn btn-success">update</button>&numsp;<button class="btn btn-danger">delete</button></td>
+                </tr>
+              </tbody>
+            </table>
+            <!-- End Table Variants -->
+    
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <!-- <h4>Search By Category</h4> -->
+      </div>
+     </div>
+    </main>
 
       <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
       <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
