--- a/add_employee.html
+++ b/add_employee.html
@@ -17,10 +17,7 @@
         <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
         <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-        <link href="assets/vendor/quill/quill.snow.css" rel="stylesheet">
-        <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">
-        <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-        <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
+      
 
         <link href="assets/css/style.css" rel="stylesheet">
 </head>
@@ -260,16 +257,84 @@
 
   </aside><!-- End Sidebar-->
 
+  <main id="main" class="main">
 
+    <div class="pagetitle">
+      <h1>Dashboard</h1>
+      <nav>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
+          <li class="breadcrumb-item active">Add New Employee</li>
+        </ol>
+      </nav> 
+    </div>
 
-      <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <div class="container">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"> Add New Employee</h5>
+          <div class="container mb-3">
+                <label class="form-label"><strong>Employe Name</strong></label>
+                <input type="text" class="form-control" placeholder="Enter Employe Name...">
+          </div>
+          <div class="container mb-3">
+                <label class="form-label"><strong>Employe Img</strong></label>
+                <input type="file" class="form-control">
+          </div>
+          <div class="container mb-3">
+            <label class="form-label"><strong>Employe Age</strong></label>
+            <input type="text" class="form-control" placeholder="Enter Employe Age...">
+          </div>
+          <div class="container mb-3">
+            <label class="form-label"><strong>Employe Gender</strong></label>
+            <select class="form-select">
+              <option value="">Select gender</option>
+              <option value="">male</option>
+              <option value="">female</option>
+            </select>
+          </div>
+          <div class="container mb-3">
+            <label class="form-label"><strong>Employe Dob</strong></label>
+            <input type="date" class="form-control">
+          </div>
+          <div class="container mb-3">
+            <label class="form-label"><strong>Employe Phone</strong></label>
+            <input type="phone" class="form-control" placeholder="Enter Employe Phone...">
+          </div>
+          <div class="container mb-3">
+            <label class="form-label"><strong>Employe Address</strong></label>
+            <input type="phone" class="form-control" placeholder="Enter Employe Address...">
+          </div>
+          <div class="container mb-3">
+            <label class="form-label"><strong>Employe Service</strong></label>
+            <input type="phone" class="form-control" placeholder="Enter Employe Service...">
+          </div>
+          <div class="container mb-3">
+            <label class="form-label"><strong>Employe Certificate</strong></label>
+            <input type="file" class="form-control">
+          </div>
+          <div class="container mb-3">
+            <label class="form-label"><strong>Employe Experience</strong></label>
+            <input type="text" class="form-control" placeholder="Enter Employe Experience ...">
+          </div>
+          <div class="container mb-3">
+            <label class="form-label"><strong>Employe company_associated</strong></label>
+            <select class="form-select">
+              <option value="">Select company_associated with</option>
+              <option value="">Freelancer</option>
+              <option value="">Company</option>
+            </select>
+          </div>
+        <div class="text-center mb-3">
+          <button class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+    </div>
+    </main>
+
       <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-      <script src="assets/vendor/chart.js/chart.umd.js"></script>
-      <script src="assets/vendor/echarts/echarts.min.js"></script>
-      <script src="assets/vendor/quill/quill.min.js"></script>
-      <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-      <script src="assets/vendor/tinymce/tinymce.min.js"></script>
-      <script src="assets/vendor/php-email-form/validate.js"></script>
+ 
     
       <!-- Template Main JS File -->
       <script src="assets/js/main.js"></script>
