--- a/add_service.html
+++ b/add_service.html
@@ -260,16 +260,47 @@
 
   </aside><!-- End Sidebar-->
 
+  <main id="main" class="main">
 
+    <div class="pagetitle">
+      <h1>Dashboard</h1>
+      <nav>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
+          <li class="breadcrumb-item active">Add New Service</li>
+        </ol>
+      </nav>
+    </div>
+    
+    <div class="container">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"> Add New Service</h5>
+          <div class="container mb-3">
+                <label class="form-label"><strong>Service Name</strong></label>
+                <input type="text" class="form-control" placeholder="Enter Service Name...">
+          </div>
+          <div class="container mb-3">
+                <label class="form-label"><strong>Service Providers</strong></label>
+                <select class="form-select">
+                  <option value="">Select Service Provider</option>
+                  <option value="company&employe">Company & Employee</option>
+                </select>
+          </div>
+          <div class="container mb-3">
+            <label class="form-label"><strong>Service Added Date</strong></label>
+            <input type="date" class="form-control">
+      </div>
+        <div class="text-center mb-3">
+          <button class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+    </div>
+    </main>
 
-      <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
       <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-      <script src="assets/vendor/chart.js/chart.umd.js"></script>
-      <script src="assets/vendor/echarts/echarts.min.js"></script>
-      <script src="assets/vendor/quill/quill.min.js"></script>
-      <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-      <script src="assets/vendor/tinymce/tinymce.min.js"></script>
-      <script src="assets/vendor/php-email-form/validate.js"></script>
+ 
     
       <!-- Template Main JS File -->
       <script src="assets/js/main.js"></script>
