connecting with db

--- a/view_subscription.html
+++ b/view_subscription.html
@@ -306,7 +306,7 @@
                   <td>$49/Monthly</td>
                   <td>02-01-2022</td>
                   <td>02-02-2022</td>
-                  <td class="d-flex"><button class="btn btn-primary text-white">view</button></td>
+                  <td class="d-flex"><button class="btn btn-primary text-white">view</button>&numsp;<button class="btn btn-success text-white">Update</button>&numsp;<button class="btn btn-danger text-white">Delete</button></td>
                 </tr>
                 <tr>
                   <th scope="row">1</th>
@@ -315,7 +315,7 @@
                   <td>$49/Monthly</td>
                   <td>02-01-2022</td>
                   <td>02-02-2022</td>
-                  <td class="d-flex"><button class="btn btn-primary text-white">view</button></td>
+                  <td class="d-flex"><button class="btn btn-primary text-white">view</button>&numsp;<button class="btn btn-success text-white">Update</button>&numsp;<button class="btn btn-danger text-white">Delete</button></td>
                 </tr>
               </tbody>
             </table>
