--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
               <div class="d-flex justify-content-center py-4">
-                <a href="login.html" class="logo d-flex align-items-center w-auto">
+                <a href="index.html" class="logo d-flex align-items-center w-auto">
                   <img src="assets/img/somfix-logo.png" style="width:100%; position: relative; top: 4px;">
                   <span class="d-none d-lg-block">SOMFIX</span>
                 </a>
@@ -60,7 +60,7 @@
                   </div>
 
                   <form class="row g-3">
-                      <p style="background-color: #F9B5D0;" id="errormsg"></p>
+                      <p style="background-color: #ff0066; color:white; display: none;" id="errormsg" class="p-2"></p>
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">Username</label>
                       <div class="input-group">
