--- a/view_employee.html
+++ b/view_employee.html
@@ -273,8 +273,8 @@
       </nav>
     </div>
     <div class="row">
-      <div class="col-xxl-20 col-md-12">
-        <div class="card">
+      <div class="col-xxl-12 col-md-12">
+        <div class="card w-full">
           <div class="card-body">
             <h5 class="card-title">View Employe </h5>
           <div class="mb-4">
