project still in test mode

--- a/view_subscription.html
+++ b/view_subscription.html
@@ -242,9 +242,9 @@
      <!-- !-- End Register Page Nav --> 
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="transection.html">
+        <a class="nav-link collapsed" id="logout" href="#">
           <i class="bi bi-box-arrow-in-right"></i>
-          <span>Transection Report</span>
+          <span>Logout</span>
         </a>
       </li><!-- End Login Page Nav -->
 <!-- 
@@ -334,6 +334,8 @@
     
       <!-- Template Main JS File -->
       <script src="assets/js/main.js"></script>
+      <script type="module" src="assets/js/checkstate.js"></script>
+      <script type="module" src="assets/js/logout.js"></script>
     
 </body>
 </html>
