--- a/add_subscription.html
+++ b/add_subscription.html
@@ -90,13 +90,6 @@
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <i class="bi bi-box-arrow-right"></i>
-                <span>Sign Out</span>
-              </a>
-            </li>
-
           </ul><!-- End Profile Dropdown Items -->
         </li><!-- End Profile Nav -->
 
@@ -242,9 +235,9 @@
      <!-- !-- End Register Page Nav --> 
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="transection.html">
+        <a class="nav-link collapsed" href="#" id="logout">
           <i class="bi bi-box-arrow-in-right"></i>
-          <span>Transection Report</span>
+          <span>Logout</span>
         </a>
       </li><!-- End Login Page Nav -->
 <!-- 
@@ -314,6 +307,8 @@
     
       <!-- Template Main JS File -->
       <script src="assets/js/main.js"></script>
+      <script type="module" src="assets/js/checkstate.js"></script>
+      <script type="module" src="assets/js/logout.js"></script>
     
 </body>
 </html>
