--- a/company/users-profile.html
+++ b/company/users-profile.html
@@ -10,24 +10,24 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/quill/quill.snow.css" rel="stylesheet">
-  <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/quill/quill.snow.css" rel="stylesheet">
+  <link href="../assets/vendor/quill/quill.bubble.css" rel="stylesheet">
+  <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="../assets/vendor/simple-datatables/style.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: NiceAdmin - v2.5.0
@@ -43,7 +43,7 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="dashboard.html" class="logo d-flex align-items-center">
-        <img src="assets/img/somfix-logo.png" alt="Somfix-logo" style="position:relative; top:6px;">
+        <img src="../assets/img/somfix-logo.png" alt="Somfix-logo" style="position:relative; top:6px;">
         <span class="d-none d-lg-block"><span style="font-size: 18px; color: black;">SOMFIX</span></span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -77,7 +77,7 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+            <img src="../assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
             <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
           </a><!-- End Profile Iamge Icon -->
 
@@ -110,162 +110,99 @@
     </nav><!-- End Icons Navigation -->
 
   </header><!-- End Header -->
+ <!-- ======= Sidebar ======= -->
+ <aside id="sidebar" class="sidebar">
 
-  <!-- ======= Sidebar ======= -->
-  <aside id="sidebar" class="sidebar">
+  <ul class="sidebar-nav" id="sidebar-nav">
 
-    <ul class="sidebar-nav" id="sidebar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="dashboard.html" style="background-color: white;">
+        <i class="bi bi-grid"></i>
+        <span>Dashboard</span>
+      </a>
+    </li><!-- End Dashboard Nav -->
+    <li class="nav-item">
+      <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+        <i class="bi bi-journal-text"></i><span>Employees</span><i class="bi bi-chevron-down ms-auto"></i>
+      </a>
+      <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <li>
+          <a href="add_employee.html">
+            <i class="bi bi-circle"></i><span>Add Employee</span>
+          </a>
+        </li>
+        <li>
+          <a href="view_employee.html">
+            <i class="bi bi-circle"></i><span>View Employee</span>
+          </a>
+        </li>
+      </ul>
+    </li><!-- End Forms Nav -->
+    <li class="nav-item">
+      <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
+        <i class="bi bi-bar-chart"></i><span>Services</span><i class="bi bi-chevron-down ms-auto"></i>
+      </a>
+      <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <li>
+          <a href="add_service.html">
+            <i class="bi bi-circle"></i><span>Assign Services</span>
+          </a>
+        </li>
+        <li>
+          <a href="view_service.html">
+            <i class="bi bi-circle"></i><span>View Services</span>
+          </a>
+        </li>
+        <li>
+          <a href="service_report.html">
+            <i class="bi bi-circle"></i><span>Service Reports</span>
+          </a>
+        </li>
+      </ul>
+    </li><!-- End Charts Nav -->
+    <li class="nav-heading">Other Information</li>
 
-      <li class="nav-item">
-        <a class="nav-link " href="dashboard.html" style="background-color: white;">
-          <i class="bi bi-grid"></i>
-          <span>Dashboard</span>
-        </a>
-      </li><!-- End Dashboard Nav -->
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="users-profile.html" style="background-color: #F6F9FF;">
+        <i class="bi bi-person"></i>
+        <span>Profile</span>
+      </a>
+    </li><!-- End Profile Page Nav -->
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-menu-button-wide"></i><span>Company</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="add_company.html">
-              <i class="bi bi-circle"></i><span>Add Companies</span>
-            </a>
-          <li>
-            <a href="view_company.html">
-              <i class="bi bi-circle"></i><span>View Companies</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Components Nav -->
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="customer_complain.html">
+        <i class="bi bi-question-circle"></i>
+        <span>Customer Complains</span>
+      </a>
+    </li><!-- End F.A.Q Page Nav -->
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-journal-text"></i><span>Employees</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="add_employee.html">
-              <i class="bi bi-circle"></i><span>Add Employee</span>
-            </a>
-          </li>
-          <li>
-            <a href="view_employee.html">
-              <i class="bi bi-circle"></i><span>View Employee</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Forms Nav -->
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="payment.html">
+        <i class="bi bi-envelope"></i>
+        <span>Payment</span>
+      </a>
+    </li><!-- End Contact Page Nav -->
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-layout-text-window-reverse"></i><span>Customers</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="add_customer.html">
-              <i class="bi bi-circle"></i><span>Add Customer</span>
-            </a>
-          </li>
-          <li>
-            <a href="view_customer.html">
-              <i class="bi bi-circle"></i><span>View Customers</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Tables Nav -->
+   <!-- !-- End Register Page Nav --> 
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-bar-chart"></i><span>Services</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="add_service.html">
-              <i class="bi bi-circle"></i><span>Add Services</span>
-            </a>
-          </li>
-          <li>
-            <a href="view_service.html">
-              <i class="bi bi-circle"></i><span>View Services</span>
-            </a>
-          </li>
-          <li>
-            <a href="service_report.html">
-              <i class="bi bi-circle"></i><span>Service Reports</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Charts Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-gem"></i><span>Subscriptions</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="add_subscription.html">
-              <i class="bi bi-circle"></i><span>Add Subscriptions</span>
-            </a>
-          </li>
-          <li>
-            <a href="view_subscription.html">
-              <i class="bi bi-circle"></i><span>View Subscriptions</span>
-            </a>
-          </li>
-          <li>
-            <a href="subscription_report.html">
-              <i class="bi bi-circle"></i><span>Subscriptions Report</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Icons Nav -->
-
-      <li class="nav-heading">Other Information</li>
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="users-profile.html" style="background-color: #F6F9FF;">
-          <i class="bi bi-person"></i>
-          <span>Profile</span>
-        </a>
-      </li><!-- End Profile Page Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="customer_complain.html">
-          <i class="bi bi-question-circle"></i>
-          <span>Customer Complains</span>
-        </a>
-      </li><!-- End F.A.Q Page Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="report.html">
-          <i class="bi bi-envelope"></i>
-          <span>Report</span>
-        </a>
-      </li><!-- End Contact Page Nav -->
-
-     <!-- !-- End Register Page Nav --> 
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" id="logout" href="#">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Logout</span>
-        </a>
-      </li><!-- End Login Page Nav -->
+    <li class="nav-item">
+      <a class="nav-link collapsed">
+        <i class="bi bi-box-arrow-in-right"></i>
+        <span>Logout</span>
+      </a>
+    </li><!-- End Login Page Nav -->
 <!-- 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-error-404.html">
-          <i class="bi bi-dash-circle"></i>
-          <span>Total Payment</span>
-        </a>
-      </li>End Error 404 Page Nav -->
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="pages-error-404.html">
+        <i class="bi bi-dash-circle"></i>
+        <span>Total Payment</span>
+      </a>
+    </li>End Error 404 Page Nav -->
 
 
-    </ul>
+  </ul>
 
-  </aside><!-- End Sidebar-->
-
+</aside><!-- End Sidebar-->
 
 
 
@@ -289,7 +226,7 @@
           <div class="card">
             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
-              <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+              <img src="../assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
               <h2>Kevin Anderson</h2>
               <h3>Admin</h3>
        
@@ -458,13 +395,11 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+ 
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-  <script type="module" src="assets/js/checkstate.js"></script>
-  <script type="module" src="assets/js/logout.js"></script>
+  <script src="../assets/js/main.js"></script>
 
 </body>
 
