--- a/customer_complain.html
+++ b/customer_complain.html
@@ -90,13 +90,6 @@
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <i class="bi bi-box-arrow-right"></i>
-                <span>Sign Out</span>
-              </a>
-            </li>
-
           </ul><!-- End Profile Dropdown Items -->
         </li><!-- End Profile Nav -->
 
@@ -242,9 +235,9 @@
      <!-- !-- End Register Page Nav --> 
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="transection.html">
+        <a class="nav-link collapsed" id="logout" href="#">
           <i class="bi bi-box-arrow-in-right"></i>
-          <span>Transection Report</span>
+          <span>Logout</span>
         </a>
       </li><!-- End Login Page Nav -->
 <!-- 
@@ -330,17 +323,13 @@
      </div>
     </main>
 
-      <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
       <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-      <script src="assets/vendor/chart.js/chart.umd.js"></script>
-      <script src="assets/vendor/echarts/echarts.min.js"></script>
-      <script src="assets/vendor/quill/quill.min.js"></script>
-      <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-      <script src="assets/vendor/tinymce/tinymce.min.js"></script>
-      <script src="assets/vendor/php-email-form/validate.js"></script>
+
     
       <!-- Template Main JS File -->
       <script src="assets/js/main.js"></script>
+      <script type="module" src="assets/js/checkstate.js"></script>
+      <script type="module" src="assets/js/logout.js"></script>
     
 </body>
 </html>
