--- a/company/users-profile.html
+++ b/company/users-profile.html
@@ -145,19 +145,24 @@
       <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
         <li>
           <a href="add_service.html">
-            <i class="bi bi-circle"></i><span>Assign Services</span>
+            <i class="bi bi-circle"></i><span>Create Services</span>
           </a>
         </li>
         <li>
           <a href="view_service.html">
-            <i class="bi bi-circle"></i><span>View Services</span>
+            <i class="bi bi-circle"></i><span>View Requested Services</span>
           </a>
         </li>
         <li>
           <a href="service_report.html">
-            <i class="bi bi-circle"></i><span>Service Reports</span>
+            <i class="bi bi-circle"></i><span>Create Service Category</span>
           </a>
-        </li>
+        </li>      
+        <li>
+          <a href="viewservicecategory.html">
+            <i class="bi bi-circle"></i><span>View Service Category</span>
+          </a>
+        </li>      
       </ul>
     </li><!-- End Charts Nav -->
     <li class="nav-heading">Other Information</li>
