role based login implamented

--- a/company/users-profile.html
+++ b/company/users-profile.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Profile</title>
+  <title>Company | Profile</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -191,7 +191,7 @@
    <!-- !-- End Register Page Nav --> 
 
     <li class="nav-item">
-      <a class="nav-link collapsed">
+      <a class="nav-link collapsed" href="#" id="logout">
         <i class="bi bi-box-arrow-in-right"></i>
         <span>Logout</span>
       </a>
@@ -405,6 +405,7 @@
 
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
+  <script type="module" src="js/logout.js"></script>
 
 </body>
 
