--- a/company/dashboard.html
+++ b/company/dashboard.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-  <title>Admin Dashboard</title>
+  <title>Comapny Dashboard</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -187,7 +187,7 @@
      <!-- !-- End Register Page Nav --> 
 
       <li class="nav-item">
-        <a class="nav-link collapsed">
+        <a class="nav-link collapsed" href="#" id="logout"> 
           <i class="bi bi-box-arrow-in-right"></i>
           <span>Logout</span>
         </a>
@@ -405,7 +405,7 @@
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
   <!-- <script type="module" src="assets/js/checkstate.js"></script> -->
-  <script type="module" src="../ssets/js/logout.js"></script>
+  <script type="module" src="js/logout.js"></script>
 
 </body>
 
