--- a/company/payment.html
+++ b/company/payment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Report</title>
+    <title>Company | Report</title>
       <!-- Favicons -->
         <link href="../assets/img/favicon.png" rel="icon">
         <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -179,7 +179,7 @@
    <!-- !-- End Register Page Nav --> 
 
     <li class="nav-item">
-      <a class="nav-link collapsed">
+      <a class="nav-link collapsed" href="#" id="logout">
         <i class="bi bi-box-arrow-in-right"></i>
         <span>Logout</span>
       </a>
@@ -225,6 +225,7 @@
     
       <!-- Template Main JS File -->
       <script src="../assets/js/main.js"></script>
+      <script type="module" src="js/logout.js"></script>
     
 </body>
 </html>
