--- a/company/viewservicecategory.html
+++ b/company/viewservicecategory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Service</title>
+    <title>Company | View Service</title>
       <!-- Favicons -->
         <link href="../assets/img/favicon.png" rel="icon">
         <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -179,7 +179,7 @@
    <!-- !-- End Register Page Nav --> 
 
     <li class="nav-item">
-      <a class="nav-link collapsed">
+      <a class="nav-link collapsed" href="#" id="logout">
         <i class="bi bi-box-arrow-in-right"></i>
         <span>Logout</span>
       </a>
@@ -205,7 +205,7 @@
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
-          <li class="breadcrumb-item active">View Service</li>
+          <li class="breadcrumb-item active">View Service Category</li>
         </ol>
       </nav>
     </div>
@@ -213,7 +213,7 @@
       <div class="col-xxl-20 col-md-12">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">View Service </h5>
+            <h5 class="card-title">View Service Category</h5>
           <div class="mb-4">
             <div class="col-4 d-flex">
               <input type="text" class="form-control" placeholder="Search by name">
@@ -255,6 +255,7 @@
       <!-- Template Main JS File -->
       <script src="../assets/js/main.js"></script>
       <script type="module" src="js/add-service-category.js"></script>
+      <script type="module" src="js/logout.js"></script>
     
 </body>
 </html>
