phase one completed

--- a/company/displaysingleemployeedata.html
+++ b/company/displaysingleemployeedata.html
@@ -217,6 +217,7 @@
               <p class="text-center" id="loading"></p>
               <p>Employee Profile Img : &numsp;<span id="img" style="font-size: 18px;"></span></p>
               <p>Employee Fullname :  &numsp;<span id="fullname" style="font-size: 18px;"></span></p>
+              <p>Employee Email :  &numsp;<span id="employeemail" style="font-size: 18px;"></span></p>
               <p>Employee Age :   &numsp;<span id="age" style="font-size: 18px;"></span></p>
               <p>Employee Gender :   &numsp;<span id="gender" style="font-size: 18px;"></span></p>
               <p>Employee Dob :   &numsp;<span id="dob" style="font-size: 18px;"></span></p>
