--- a/company/viewservicecategory.html
+++ b/company/viewservicecategory.html
@@ -254,7 +254,9 @@
     
       <!-- Template Main JS File -->
       <script src="../assets/js/main.js"></script>
-      <script type="module" src="js/add-service-category.js"></script>
+      <!-- <script type="module" src="js/add-service-category.js"></script> -->
+      <script type="module" src="js/viewservice-category.js"></script>
+      <script type="module" src="js/delete-service-category.js"></script>
       <script type="module" src="js/logout.js"></script>
     
 </body>
