--- a/company/add_service.html
+++ b/company/add_service.html
@@ -213,6 +213,8 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"> Create New Service</h5>
+          <p class="bg-danger text-white p-2" style="display: none;" id="error">hello</p>
+          <p class="bg-success text-white p-2" style="display: none;" id="success">hello</p>
           <form>
             <div class="container mb-3">
               <label class="form-label"><strong>Service Name</strong></label>
@@ -222,16 +224,14 @@
               <label class="form-label"><strong>Service Providers</strong></label>
               <select class="form-select" id="serviceprovider">
                 <option selected>Select Service Provider</option>
-                <option value="company&employe">employee 1</option>
-                <option value="company&employe">employee 2</option>
+                
               </select>
         </div>
         <div class="container mb-3">
-          <label class="form-label"><strong>Service Category</strong></label>
-          <select class="form-select" id="servicecategory">
+          <label class="form-label"><strong>Service Type</strong></label>
+          <select class="form-select" id="servicetype">
             <option selected>Select Service Category</option>
-            <option value="company&employe">Plumber </option>
-            <option value="company&employe">Elecrician </option>
+            
           </select>      
         </div>
         <div class="container mb-3">
@@ -240,7 +240,7 @@
         </div>
         <div class="container mb-3">
           <label class="form-label"><strong>Customer Name</strong></label>
-          <input type="text" class="form-control" placeholder="Customer Name">     
+          <input type="text" id="customer_name" class="form-control" placeholder="Customer Name">     
         </div>
         <div class="container mb-3">
           <label class="form-label"><strong>Service Requested Date</strong></label>
