--- a/company/update-service-category.html
+++ b/company/update-service-category.html
@@ -205,7 +205,7 @@
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="dashboard.html">Dashboard</a></li>
-          <li class="breadcrumb-item active">Update Form</li>
+          <li class="breadcrumb-item active">Update Service Category</li>
         </ol>
       </nav>
     </div>
@@ -213,70 +213,26 @@
         <div class="col-xxl-12 col-md-12">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Update Form</h5>
+                <h5 class="card-title">Update Service Category </h5>
                 <div class="mb-4">
-                  <form>
-                    <p class="p-2 bg-success text-white" id="success-msg" style="display: none;"></p>
-                    <p class="p-2 bg-danger text-white" id="error-msg"style="display: none;"></p>
-                    <div class="container mb-3">
-                          <label class="form-label"><strong>Employe Fullname</strong></label>
-                          <input type="text" id="fullname" class="form-control" placeholder="Enter Employe Name...">
-                    </div>
-                    <div class="container mb-3">
-                          <label class="form-label"><strong>Employe Img</strong></label>
-                          <input type="file" id="img" class="form-control">
-                    </div>
-                    <div class="container mb-3">
-                      <label class="form-label"><strong>Employe Age</strong></label>
-                      <input type="text" id="age" class="form-control" placeholder="Enter Employe Age...">
-                    </div>
-                    <div class="container mb-3">
-                      <label class="form-label"><strong>Employe Gender</strong></label>
-                      <select class="form-select" id="gender">
-                        <option selected>Select gender</option>
-                        <option value="male">male</option>
-                        <option value="female">female</option>
-                      </select>
-                    </div>
-                    <div class="container mb-3">
-                      <label class="form-label"><strong>Employe Dob</strong></label>
-                      <input type="date" class="form-control" id="dob">
-                    </div>
-                    <div class="container mb-3">
-                      <label class="form-label"><strong>Employe Phone</strong></label>
-                      <input type="phone"id="phone" class="form-control" placeholder="Enter Employe Phone...">
-                    </div>
-                    <div class="container mb-3">
-                      <label class="form-label"><strong>Country</strong></label>
-                      <input type="phone"  id="country" class="form-control" placeholder="Enter Country...">
-                    </div>
-                    <div class="container mb-3">
-                      <label class="form-label"><strong>Address</strong></label>
-                      <input type="phone" id="address" class="form-control" placeholder="Enter  Address...">
-                    </div>
-                    <div class="container mb-3">
-                      <label class="form-label"><strong>Service Type</strong></label>
-                      <select class="form-select" id="service_category">
-                        <option >Select Service Type </option>
-                        
-                      </select>
-                    </div>
-                    <div class="container mb-3">
-                      <label class="form-label"><strong>Employe Certificate</strong></label>
-                      <input type="file" class="form-control" id="certificate">
-                    </div>
-                    <div class="container mb-3">
-                      <label class="form-label"><strong>Employe Experience</strong></label>
-                      <input type="text" id="experience" class="form-control" placeholder="Enter Employe Experience ...">
-                    </div>
-                    <div class="container mb-3">
-                      <label class="form-label"><strong>Employe company_associated</strong></label>
-                      <input type="text"  id="company-associated" class="form-control">
-                    </div>
-                  <div class="text-center mb-3">
-                    <button type="button" class="btn btn-primary" id="submit">Submit</button>
-                  </div>
-                   </form>
+               <form>
+          <p class="p-2 bg-success text-white" id="success-msg" style="display: none;"></p>
+          <p class="p-2 bg-danger text-white" id="error-msg"style="display: none;"></p>
+          <p class="text-center" id="loading"></p>
+          <form>
+            <div class="container mb-3">
+              <label class="form-label"><strong>Service Name</strong></label>
+              <input type="text"  id="servicename" class="form-control" placeholder="Enter Service Category Name...">      
+        </div>
+        <div class="container mb-3">
+              <label class="form-label"><strong>Service Added Date</strong></label>
+              <input type="date" class="form-control" id="added-date">      
+        </div>
+          </form>
+        <div class="text-center mb-3">
+          <button class="btn btn-primary" id="submit">Submit</button>
+        </div>
+               </form>
                 </div>
               </div>
             </div>
@@ -294,7 +250,7 @@
     
     <!--   viewdata  JS File -->
     <script   src="../assets/js/main.js"></script>
-    <script  type="module"  src="js/update-employee.js"></script>
+  <script  type="module"  src="js/update-single-service-category.js"></script>
     <script type="module" src="js/logout.js"></script>
 
 
