project first phase compeleted

--- a/company/service_report.html
+++ b/company/service_report.html
@@ -213,6 +213,10 @@
           <p class="p-2 bg-danger text-white" id="error-msg"style="display: none;"></p>
           <form>
             <div class="container mb-3">
+              <label class="form-label"><strong>Serice Image(Icon)</strong></label>
+              <input type="file"  id="serviceimg" class="form-control">      
+        </div>
+            <div class="container mb-3">
               <label class="form-label"><strong>Service Name</strong></label>
               <input type="text"  id="servicename" class="form-control" placeholder="Enter Service Category Name...">      
         </div>
