--- a/company/viewservicecategory.html
+++ b/company/viewservicecategory.html
@@ -227,6 +227,7 @@
               <thead>
                 <tr>
                   <th scope="row">#</th>
+                  <th>Service Image</th>
                   <th>Service Name</th>
                   <th>Service Added Date</th>   
                   <th>Action</th>
