litle bit change are made

--- a/company/add_employee.html
+++ b/company/add_employee.html
@@ -135,19 +135,10 @@
           </li>
           <li>
             <a href="view_service.html">
-              <i class="bi bi-circle"></i><span>View Requested Services</span>
+              <i class="bi bi-circle"></i><span>View  Services</span>
             </a>
           </li>
-          <li>
-            <a href="service_report.html">
-              <i class="bi bi-circle"></i><span>Create Service Category</span>
-            </a>
-          </li>
-          <li>
-            <a href="viewservicecategory.html">
-              <i class="bi bi-circle"></i><span>View Service Category</span>
-            </a>
-          </li>
+          
           <li>
             <a href="viewbooking.html">
               <i class="bi bi-circle"></i><span>View Booking</span>
@@ -227,6 +218,7 @@
                   <label class="form-label"><strong>Employe Email</strong></label>
                   <input type="text" id="employemail" class="form-control" placeholder="Enter Employe Email...">
             </div>
+            
             <div class="container mb-3">
                   <label class="form-label"><strong>Employe Image</strong></label>
                   <input type="file" class="form-control" id="img">
