--- a/company/displaysingleemployeedata.html
+++ b/company/displaysingleemployeedata.html
@@ -137,19 +137,10 @@
           </li>
           <li>
             <a href="view_service.html">
-              <i class="bi bi-circle"></i><span>View Requested Services</span>
+              <i class="bi bi-circle"></i><span>View  Services</span>
             </a>
           </li>
-          <li>
-            <a href="service_report.html">
-              <i class="bi bi-circle"></i><span>Create Service Category</span>
-            </a>
-          </li>
-          <li>
-            <a href="viewservicecategory.html">
-              <i class="bi bi-circle"></i><span>View Service Category</span>
-            </a>
-          </li>
+         
           <li>
             <a href="viewbooking.html">
               <i class="bi bi-circle"></i><span>View Booking</span>
@@ -216,7 +207,8 @@
             <div class="mb-4">
               <p class="text-center" id="loading"></p>
               <p>Employee Profile Img : &numsp;<span id="img" style="font-size: 18px;"></span></p>
-              <p>Employee Fullname :  &numsp;<span id="fullname" style="font-size: 18px;"></span></p>
+              <br>
+              <p>Employee Fullname :  &numsp;<span id="fullnames" style="font-size: 18px;"></span></p>
               <p>Employee Email :  &numsp;<span id="employeemail" style="font-size: 18px;"></span></p>
               <p>Employee Age :   &numsp;<span id="age" style="font-size: 18px;"></span></p>
               <p>Employee Gender :   &numsp;<span id="gender" style="font-size: 18px;"></span></p>
