--- a/company/viewbooking.html
+++ b/company/viewbooking.html
@@ -138,19 +138,10 @@
         </li>
         <li>
           <a href="view_service.html" >
-            <i class="bi bi-circle"></i><span>View Requested Services</span>
+            <i class="bi bi-circle"></i><span>View  Services</span>
           </a>
         </li>
-        <li>
-          <a href="service_report.html">
-            <i class="bi bi-circle"></i><span>Create Service Category</span>
-          </a>
-        </li>
-        <li>
-          <a href="viewservicecategory.html">
-            <i class="bi bi-circle"></i><span>View Service Category</span>
-          </a>
-        </li>
+       
         <li>
           <a href="viewbooking.html" style="background-color: #F6F9FF;">
             <i class="bi bi-circle"></i><span>View Booking</span>
