--- a/company/display_single_service.html
+++ b/company/display_single_service.html
@@ -138,19 +138,10 @@
           </li>
           <li>
             <a href="view_service.html" style="background-color: #F6F9FF;" >
-              <i class="bi bi-circle"></i><span>View Requested Services</span>
+              <i class="bi bi-circle"></i><span>View  Services</span>
             </a>
           </li>
-          <li>
-            <a href="service_report.html">
-              <i class="bi bi-circle"></i><span>Create Service Category</span>
-            </a>
-          </li>
-          <li>
-            <a href="viewservicecategory.html">
-              <i class="bi bi-circle"></i><span>View Service Category</span>
-            </a>
-          </li>
+         
           <li>
             <a href="viewbooking.html">
               <i class="bi bi-circle"></i><span>View Booking</span>
@@ -244,7 +235,7 @@
       <!-- Template Main JS File -->
       <script src="../assets/js/main.js"></script>
       <script type="module" src="js/profile_data.js"></script>
-      <script type="module" src="js/viewservice.js"></script>
+      <script type="module" src="js/view_singleservice.js"></script>
       <script type="module" src="js/logout.js"></script>
     
 </body>
