--- a/view_employee.html
+++ b/view_employee.html
@@ -117,10 +117,7 @@
           <i class="bi bi-menu-button-wide"></i><span>Company</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="add_company.html">
-              <i class="bi bi-circle"></i><span>Add Companies</span>
-            </a>
+        
           <li>
             <a href="view_company.html">
               <i class="bi bi-circle"></i><span>View Companies</span>
@@ -155,10 +152,16 @@
         </a>
         <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="add_subscription.html">
-              <i class="bi bi-circle"></i><span>Add Subscriptions</span>
+            <a href="./add-service-category.html">
+              <i class="bi bi-circle"></i><span>Create Service Category</span>
             </a>
           </li>
+          <li>
+            <a href="viewservicecategory.html">
+              <i class="bi bi-circle"></i><span>View Service Category</span>
+            </a>
+          </li>
+          
           <li>
             <a href="view_subscription.html">
               <i class="bi bi-circle"></i><span>View Subscriptions</span>
