--- a/view_service.html
+++ b/view_service.html
@@ -115,10 +115,7 @@
           <i class="bi bi-menu-button-wide"></i><span>Company</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="add_company.html">
-              <i class="bi bi-circle"></i><span>Add Companies</span>
-            </a>
+         
           <li>
             <a href="view_company.html">
               <i class="bi bi-circle"></i><span>View Companies</span>
@@ -137,10 +134,16 @@
         </a>
         <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="view_service.html" style="background-color: #F6F9FF;">
-              <i class="bi bi-circle"></i><span>View Services</span>
+            <a href="./add-service-category.html">
+              <i class="bi bi-circle"></i><span>Create Service Category</span>
             </a>
           </li>
+          <li>
+            <a href="viewservicecategory.html" style="background-color: #F6F9FF;">
+              <i class="bi bi-circle"></i><span>View Service Category</span>
+            </a>
+          </li>
+       
           <li>
             <a href="service_report.html">
               <i class="bi bi-circle"></i><span>View Booked Service</span>
