--- a/payment.html
+++ b/payment.html
@@ -240,6 +240,7 @@
                     <th>Subcription Purchase Amount</th>
                     <th>Subscription Purchase Date</th>
                     <th>Subscription Duration</th>
+                    <th>Action</th>
                     
                     <!-- <th>Action</th> -->
                     
