--- a/singlecompanydetail.html
+++ b/singlecompanydetail.html
@@ -188,7 +188,7 @@
         </a>
       </li><!-- End Contact Page Nav -->
 
-     <!-- !-- End Register Page Nav --> 
+     
 
       <li class="nav-item">
         <a class="nav-link collapsed" id="logout" href="#">
@@ -227,12 +227,12 @@
           <div class="card-body">
             <h5 class="card-title">View Particular Company Data</h5>
             <div class="mb-4">
-           <p>   Company Logo<img id="logo" width="80"/></p>
+           <p>   Company Logo <span id="logo"></span></p>
               <p>Comapnay Name :  &numsp;<span id="companyname" style="font-size: 18px;"></span></p>
               <p>Ceo Name :   &numsp;<span id='ceoname' style="font-size: 18px;"></span></p>
               <p>Company Address :   &numsp;<span id="address" style="font-size: 18px;"></span></p>
               <p>Company Phone :  &numsp; <span id="phone" style="font-size: 18px;"></span></p>
-              <p>Company Country :  &numsp; <span id="employee" style="font-size: 18px;"></span></p>
+              <p>Company Country :  &numsp; <span id="country" style="font-size: 18px;"></span></p>
               <p>Company Description :  &numsp; <span id="desc" class="text-justify" style="font-size: 18px;"></span></p>
               <div class="text-start">
                 <a href="view_company.html" class="btn btn-primary">Go Back</a>
