--- a/singleservicecategorydata.html
+++ b/singleservicecategorydata.html
@@ -229,6 +229,7 @@
             <h5 class="card-title">Detial Service Category </h5>
             <div class="mb-4">
                 <p class="text-center" id="loading"></p>
+                <p id="serviceimg"></p>
                 <p id="servicename"></p>
                 <p id="date"></p>
                 <p id="created_by"></p>
@@ -253,7 +254,7 @@
       <!-- Template Main JS File -->
       <script src="../assets/js/main.js"></script>
       <script type="module" src="js/profile_data.js"></script>
-      <script type="module" src="js/display-signle-service-category.js"></script>
+      <script type="module" src="assets/js/display-signle-service-category.js"></script>
       <script type="module" src="js/logout.js"></script>
     
 </body>
