--- a/update-service-category.html
+++ b/update-service-category.html
@@ -186,7 +186,7 @@
           </a>
         </li><!-- End Contact Page Nav -->
   
-       <!-- !-- End Register Page Nav --> 
+     
   
         <li class="nav-item">
           <a class="nav-link collapsed" id="logout" href="#">
@@ -232,6 +232,10 @@
           <p class="text-center" id="loading"></p>
           <form>
             <div class="container mb-3">
+              <label class="form-label"><strong>Service Image</strong></label>
+              <input type="file"  id="serviceimage" class="form-control" placeholder="Enter Service Category Name...">      
+        </div>
+            <div class="container mb-3">
               <label class="form-label"><strong>Service Name</strong></label>
               <input type="text"  id="servicename" class="form-control" placeholder="Enter Service Category Name...">      
         </div>
@@ -261,9 +265,9 @@
     
     <!--   viewdata  JS File -->
     <script   src="../assets/js/main.js"></script>
-    <script type="module" src="js/profile_data.js"></script>
-  <script  type="module"  src="js/update-single-service-category.js"></script>
-    <script type="module" src="js/logout.js"></script>
+    <script type="module" src="assets/js/profile-topbar.js"></script>
+  <script  type="module"  src="assets/js/update-single-service-category.js"></script>
+    <script type="module" src="assets/js/logout.js"></script>
 
 
     </body>
