--- a/viewservicecategory.html
+++ b/viewservicecategory.html
@@ -270,7 +270,7 @@
       <script type="module" src="assets/js/viewservice-category.js"></script>
       <script type="module" src="assets/js/profile-topbar.js"></script>
       <script type="module" src="assets/js/delete-service-category.js"></script>
-      <script type="module" src="js/logout.js"></script>
+      <script type="module" src="assets/js/logout.js"></script>
     
 </body>
 </html>
