--- a/users-profile.html
+++ b/users-profile.html
@@ -245,7 +245,7 @@
             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
               <img src='' id="profile" class="rounded" width="300"/>
-              <h2 id="fullname"></h2>
+              <h2 id="fullname3"></h2>
               <h3 id="role"></h3>
        
             </div>
@@ -318,7 +318,7 @@
                     <div class="row mb-3">
                       <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="fullName" type="text" class="form-control" id="updatefullname" value="Kevin Anderson">
+                        <input name="fullName" type="text" class="form-control" id="updatefullname" >
                       </div>
                     </div>
 
@@ -330,14 +330,14 @@
                     <div class="row mb-3">
                       <label for="Phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="phone" type="text" class="form-control" id="updatePhone" value="(436) 486-3538 x29071">
+                        <input name="phone" type="text" class="form-control" id="updatePhone" >
                       </div>
                     </div>
 
                     <div class="row mb-3">
                       <label for="Email" class="col-md-4 col-lg-3 col-form-label">Email</label>
                       <div class="col-md-8 col-lg-9">
-                        <input name="email" type="email" class="form-control" id="updateEmail" value="k.anderson@example.com" readonly>
+                        <input name="email" type="email" class="form-control" id="updateEmail"  readonly>
                       </div>
                     </div>
 
